fix(app): Disable run start button if missing modules
Closes #2676

--- a/components/src/nav/SidePanel.css
+++ b/components/src/nav/SidePanel.css
@@ -6,7 +6,7 @@
 
 .panel {
   flex-shrink: 0;
-  overflow: hidden;
+  overflow: visible;
   border-right: var(--bd-light);
   background-color: var(--c-bg-light);
   position: relative;
